base/metrics/statistics_recorder.h
@@ -36,10 +36,9 @@ class HistogramSnapshotManager;
 
 // In-memory recorder of usage statistics (aka metrics, aka histograms).
 //
-// Most of the methods are static and act on a global recorder. This global
-// recorder must first be initialized using Initialize() before being used. This
-// global recorder is internally synchronized and all the static methods are
-// thread safe.
+// All the public methods are static and act on a global recorder. This global
+// recorder is internally synchronized and all the static methods are thread
+// safe.
 //
 // StatisticsRecorder doesn't have any public constructor. For testing purpose,
 // you can create a temporary recorder using the factory method
@@ -69,15 +68,12 @@ class BASE_EXPORT StatisticsRecorder {
   // Precondition: The recorder being deleted is the current global recorder.
   ~StatisticsRecorder();
 
-  // Initializes the global recorder. Safe to call multiple times.
+  // DEPRECATED.
   //
-  // This method is thread safe.
-  static void Initialize();
-
-  // Finds out if histograms can now be registered into our list.
-  //
-  // This method is thread safe.
-  static bool IsActive();
+  // StatisticsRecorder is always active and ready. There is no need to
+  // explicitly initialize it.
+  static void Initialize() {}
+  static bool IsActive() { return true; }
 
   // Registers a provider of histograms that can be called to merge those into
   // the global recorder. Calls to ImportProvidedHistograms() will fetch from
@@ -248,6 +244,12 @@ class BASE_EXPORT StatisticsRecorder {
 
   friend class StatisticsRecorderTest;
   FRIEND_TEST_ALL_PREFIXES(StatisticsRecorderTest, IterationTest);
+
+  // Initializes the global recorder if it doesn't already exist. Safe to call
+  // multiple times.
+  //
+  // Precondition: The global lock is already acquired.
+  static void EnsureGlobalRecorderWhileLocked();
 
   // Fetches set of existing histograms. Ownership of the individual histograms
   // remains with the StatisticsRecorder.
